Fix about header spacing

--- a/src/styles/ProjectPortalPage.scss
+++ b/src/styles/ProjectPortalPage.scss
@@ -102,6 +102,15 @@ ABOUT
   color: $dark-grey;
 }
 
+.about__heading {
+  h1 {
+    margin: 20px 0 5px 0;
+  }
+  p {
+    margin: 0 0 20px 0;
+  }
+}
+
 .about__description {
   font-size: 14px;
 }
